fix comment word wrap

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -60,3 +60,7 @@ img.activator {
 #comment-date {
   margin: 30px;
 }
+
+.comment {
+  white-space: nowrap;
+}
